syntax = "proto3";

package google.protobuf;

option csharp_namespace = "NetCoreCleanArchitecture.Infrastructure.Grpc.EventBus";

service EventBusRpc {
  rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}
  rpc Unsubscribe (UnsubscribeRequest) returns (UnsubscribeResponse) {}
}

message SubscribeRequest {
  string Topic = 1;
}

message SubscribeResponse {
  string Topic = 1;
  bytes DomainEvent = 2;
}

message UnsubscribeRequest {
  string Topic = 1;
}

message UnsubscribeResponse {
  string Topic = 1;
  bool IsSuccess = 2;
}